[gd_scene load_steps=8 format=3 uid="uid://cnqi1xr3vh23r"]

[ext_resource type="Script" path="res://scenes/feed/feed.gd" id="1_1gr8j"]
[ext_resource type="Texture2D" uid="uid://dar13gtjxsuqf" path="res://assets/images/feed/feed1_s.png" id="1_8shal"]

[sub_resource type="PhysicsMaterial" id="PhysicsMaterial_f7342"]
rough = true
bounce = 0.25
absorbent = true

[sub_resource type="CircleShape2D" id="CircleShape2D_fs7tv"]
radius = 3.0

[sub_resource type="Animation" id="Animation_7d6mo"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}

[sub_resource type="Animation" id="Animation_ea472"]
resource_name = "fade_out"
step = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [0, 0, 1, 2, 3, 4, 5, 6]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_wy1yg"]
_data = {
"RESET": SubResource("Animation_7d6mo"),
"fade_out": SubResource("Animation_ea472")
}

[node name="Feed" type="RigidBody2D"]
collision_layer = 2
collision_mask = 16
mass = 0.001
physics_material_override = SubResource("PhysicsMaterial_f7342")
can_sleep = false
contact_monitor = true
max_contacts_reported = 1
linear_damp_mode = 1
linear_damp = 2.5
script = ExtResource("1_1gr8j")

[node name="Sprite2D" type="Sprite2D" parent="."]
texture = ExtResource("1_8shal")
hframes = 7

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CircleShape2D_fs7tv")

[node name="DegradeTimer" type="Timer" parent="."]
wait_time = 3.0
one_shot = true

[node name="FloatTimer" type="Timer" parent="."]
one_shot = true

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_wy1yg")
}

[connection signal="body_shape_entered" from="." to="." method="_on_body_shape_entered"]
[connection signal="timeout" from="DegradeTimer" to="." method="_on_degrade_timer_timeout"]
[connection signal="timeout" from="FloatTimer" to="." method="_on_float_timer_timeout"]
[connection signal="animation_finished" from="AnimationPlayer" to="." method="_on_animation_player_animation_finished"]
